--- a/style.css
+++ b/style.css
@@ -5,4 +5,64 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "JetBrains Mono", monospace;
+  font-size: 1.5rem;
+}
+
+body {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calculator {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.display {
+  width: 100%;
+  background-color: hsl(0, 0%, 23%);
+  color: white;
+  text-align: right;
+  border-radius: 10px;
+  margin: 0.5rem;
+  padding: 0 0.5rem;
+}
+
+.calc-buttons-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  gap: 0.5rem;
+}
+
+.calc-btn {
+  padding: 0.2rem;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.calc-btn:hover {
+  filter: invert();
+  cursor: pointer;
+}
+
+.equal-btn {
+  grid-column-start: 3;
+  grid-column-end: 5;
+}
+
+.varia-btn {
+  background-color: hsl(0, 0%, 70%);
+}
+
+.operator-btn {
+  background-color: gold;
+}
+
+.number-btn {
+  background-color: hsl(0, 0%, 95%);
 }
