--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
 body {
   min-height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -66,6 +67,29 @@ body {
 .number-btn,
 .separator-btn {
   background-color: hsl(0, 0%, 95%);
+}
+
+/* Footer */
+
+/* footer {
+  position: fixed;
+  bottom: 0;
+} */
+
+footer p,
+footer a {
+  display: inline;
+  font-size: 1rem;
+}
+
+footer a {
+  background-color: hsl(0, 0%, 95%);
+  text-decoration: none;
+  color: black;
+}
+
+footer a:hover {
+  filter: invert();
 }
 
 @media (max-width: 399px) {
