Update footer css
Add property to lift footer to visibility when user has bottom tab bar on iOS.

--- a/style.css
+++ b/style.css
@@ -71,10 +71,9 @@ body {
 
 /* Footer */
 
-/* footer {
-  position: fixed;
-  bottom: 0;
-} */
+footer {
+  bottom: env(safe-area-inset-bottom);
+}
 
 footer p,
 footer a {
